--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -130,8 +130,8 @@ body {
 
 .btn-fluid {
   position: relative;
-  width: 544px;
-  height: 290px;
+
+  height: 240px;
   margin-top: 50px;
   overflow: hidden;
 }
@@ -146,9 +146,9 @@ body {
 .btn-fluid a {
   position: absolute;
   top: 50%;
-  bottom: 0;
+  bottom: 50%;
   right: 0;
-  left: 37%;
+  left: 35%;
   background-color: #E63737;
   width: 150px;
   height: 45px;
@@ -162,6 +162,15 @@ body {
   color: white;
 
 }
+
+.order1 {
+  order: 1;
+}
+
+.order2 {
+  order: 2;
+}
+
 
 /* products */
 .products {
@@ -197,7 +206,7 @@ body {
   display: inline-block;
   position: absolute;
   top: 0;
-  bottom: 0px;
+  bottom: 0;
   right: 0;
   left: 0;
   transition: .5s;
@@ -453,7 +462,8 @@ hr {
 }
 
 .success-checkout .btn-detail {
-  margin-left: 415px;
+  margin: 20px auto;
+  display: inline-block;
 }
 
 /* desktop version */
@@ -501,12 +511,25 @@ hr {
     }
   }
 
+  .order1 {
+    order: 2;
+  }
+
+  .order2 {
+    order: 1;
+  }
+
+  .btn-fluid {
+    height: 290px;
+  }
+
   .btn-fluid img:hover {
     transform: scale(1.2);
     opacity: .7;
   }
 
   .btn-fluid a {
+    left: 37%;
     opacity: 0;
   }
 
